--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,7 +154,7 @@ input, select, textarea {
 		transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
 		text-decoration: none;
-		color: inherit;
+		color: white;
 	}
 
 		a:hover {
@@ -1205,6 +1205,7 @@ input, select, textarea {
 		width: 100%;
 		padding: 4rem 2rem;
 		z-index: 3;
+		background-color: royalblue;
 	}
 
 		#wrapper:before {
