--- a/assets/css/competences.css
+++ b/assets/css/competences.css
@@ -9,7 +9,7 @@
     background: #4169e1;
     border-radius: 8px;
     padding: 20px;
-    width: 150px;
+    width: 30%; /* Ajuste la largeur pour afficher 3 cartes par ligne */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
